Fixed alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,7 @@ h2 {
     display: flex;
     gap: 10px;
     align-items: center;
+    justify-content: center;
 }
 
 .linkButton:hover {
